Closed Bug 272002 Opened 21 years ago Closed 21 years ago

Autocomplete dropdown appears when the password manager fills in passwords

Categories

(Core :: Layout: Form Controls, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8beta1

People

(Reporter: tom+bugzilla, Assigned: bryner)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0 When a login page that has been logged into before and therefore captured data is re-browsed, for example to log in again, the browser drops down a list of the data entered into the input type="text" element. This only happens when there is an onload=<element>.focus() style piece of javascript either in the onload part of the body tag, or within a script tag. It does not happen when the focus() function is not called. Reproducible: Always Steps to Reproduce: 1. Go to a page with a login and a focus() on the login element when the page loads. 2. log in 3. Log out 4. Log in again Actual Results: The drop down appears with a list of usernames used, even if there is only one. Expected Results: The site should not drop down this list if the text is within an onload attribute of the body tag. This action often hides other form elements and means that the user has to physically hide it to reveal other options, such as password fields etc, or even the submit button.
I can confirm this behavior. I'm not sure whether or not it was intentional.
*** Bug 275717 has been marked as a duplicate of this bug. ***
*** Bug 275842 has been marked as a duplicate of this bug. ***
Assignee: firefox → bryner
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: When there is a form on the page and it auto-focuses one of the input elements, the autocomplete dropdown pops up → Autocomplete dropdown appears when the password manager fills in passwords
Attached patch patch — — Splinter Review
The real problem here is that setting an input's value programatically generates an oninput event. I don't believe this is correct behavior; see http://www.w3.org/TR/2003/NOTE-DOM-Level-3-Events-20031107/events.html#Events-EventTypes-complete for the description of the "textInput" event, which our oninput event closely matches. This change suppresses firing oninput from the editor's notifications when we are setting the value ourselves.
Attachment #174182 - Flags: superreview?(bzbarsky)
Attachment #174182 - Flags: review?(bzbarsky)
Comment on attachment 174182 [details] [diff] [review] patch r+sr=bzbarsky
Attachment #174182 - Flags: superreview?(bzbarsky)
Attachment #174182 - Flags: superreview+
Attachment #174182 - Flags: review?(bzbarsky)
Attachment #174182 - Flags: review+
-> core so that I can set the approval flag
Component: General → Layout: Form Controls
Flags: review+
Product: Firefox → Core
Target Milestone: --- → mozilla1.8beta1
Version: unspecified → Trunk
Comment on attachment 174182 [details] [diff] [review] patch requesting approval, this is a pretty safe fix.
Attachment #174182 - Flags: approval1.8b?
Comment on attachment 174182 [details] [diff] [review] patch a=caillon for 1.8b
Attachment #174182 - Flags: approval1.8b? → approval1.8b+
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Are you sure Web pages don't rely on oninput working the way it did? How does it work in IE?
Or does nobody else implement it? What does the spec say we should do?
I read the textInput section differently. "One or more characters have been entered. The characters can originate from a variety of sources." Isn't auto-filling them just another source?
This patch broke autocomplete for Thunderbird and the mozilla suite. Please see Bug #282645 for details.
Blocks: 282645
(In reply to comment #10) > Are you sure Web pages don't rely on oninput working the way it did? How does > it work in IE? IE doesn't seem to have this event. Another reference for this behavior can be found on the Web Forms 2.0 draft specification (http://www.whatwg.org/specs/web-forms/current-work/#the-change), which says: --------- In addition, to address the need for even more immediate feedback mechanisms, this specification introduces the input event. This event is fired on a control whenever the value of the control changes due to input from the user, and is otherwise identical to the change event. ... Change and input events must never be triggered by scripted changes to the control value. Thus, loops caused by change event handlers triggering changes are not usually possible. ---------
*** Bug 267049 has been marked as a duplicate of this bug. ***
*** Bug 292722 has been marked as a duplicate of this bug. ***
It looks like this patch caused bug 289425.
Depends on: 289425
Blocks: 287996
Blocks: 310651
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: