Don't dispatch oninput events when the value of an input is changed programatically.  This prevents unwanted opening of the autocomplete popup when a username is prefilled.  Bug 272002, r+sr=bzbarsky, a=caillon.